slack-dark-mode.css
body {
    text-rendering: optimizeLegibility important;
    word-spacing: -1px;
    -webkit-font-smoothing: auto;
}
.p-context_bar {
    color: white !important;
    background: #626262 !important;
    border: 1px solid black !important;}
.p-classic_nav__model__title__name--dim {
  
    color: #636363 !important;
    text-transform: capitalize;}
.p-classic_nav__channel_header, .p-classic_nav__right_header{
background:#222222;}
textarea.c-input_textarea.c-input_textarea--with_hint {
    color: white;
    background: none;}
.c-message__editor__input.focus{
background: transparent;}
.p-channel_details__notification_prefs_section__pref, .p-channel_details__notification_prefs_section__pref_label{
color:white}
.c-select_button {
    background-color: black !important;}
    
.p-classic_nav__model__title__is_you{
Color:white}
.p-classic_nav__model__title__info__secondary_name{
Color:white}
textarea.c-input_textarea.c-input_textarea—with_hint{
background:transparent;}
}
.p-workspace__primary_view_body, .p-classic_nav__channel_header, .p-classic_nav__right_header, .p-classic_nav__channel_header, .p-classic_nav__right_header{
background:#222222}
.p-unreads_view__header{
background: #303030;}
.c-button-unstyled{
color:white}
.p-channel_details__members_dialog__search {
    background: #222222;
    margin-bottom:0 !important;
    padding-bottom:20px !important}
    .p-threads_view_empty{
    background:#222222;
        position: absolute;
    height: 100%;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    flex-direction: column;}
    .p-channel_details__members_dialog__list--indicate-top {
    border-top: transparent !important;}
    .p-classic_nav__channel_header__title{
    color: white !important;}
   .p-classic_nav__model__title__info__members.c-button--focus-visible:focus, .p-classic_nav__model__title__info__members:hover, .p-classic_nav__model__title__info__pins.c-button--focus-visible:focus, .p-classic_nav__model__title__info__pins:hover, .p-classic_nav__model__title__info__shared_teams.c-button--focus-visible:focus, .p-classic_nav__model__title__info__shared_teams:hover{color:white}
.c-pillow_file__snippet__content .CodeMirror{
background-color:black!important}
.p-channel_details__similar_channels_channel :hover {
    cursor: pointer;
    color: white;}
.c-message__resend_column {
    width: 4px;
    background-color: #f00 !important;}
.c-message--unprocessed .c-message__body {
    animation: none !important;}
    .c-select_options_list__option--disabled:hover {
    cursor: default;
    background-color: #303030;}
    .c-base_list_entity--dim {
    color: #959595;}
    .c-base_list_entity--highlight-dim, .c-base_list_entity--highlight-light{
   background: transparent !important}
   .c-base_list_entity--highlight-dim {
    color: grey;}
ul li {
color:white;}
.c-channel_search__new_feature_alert {
    display: flex;
    align-items: center;
    padding: 12px 16px;
    border: 1px solid #000;
    border-radius: 8px;
    background-color: #3b3b3b;
    color: white;}
.p-search_filter__option_label {
    white-space: nowrap;
    overflow-x: hidden;
    text-overflow: ellipsis;
    color: #36D4F6 !important;}
.workspace__primary_view_footer{
background:#222222 !important
}
.p-app_dialog__title_text{
color:white !important}
.p-call_subtype__description {
    font-size: 15px;
    line-height: 1.46668;
    font-weight: 400;
    color: #c0bfc0;}
.c-unified_member__secondary-name--small, .c-usergroup__description--small{
color:white !important}
.p-dm_browser_modal__list_row--active {
    background-color:black !important;}
.c-sk-modal_header, .c-sk-modal_footer{
background:#222222 !important}
.p-call_subtype__body, .p-call_subtype__footer {
    border-top: 1px solid #ddd;
    background-color: #474747;
    color: white !important;}
.p-channel_details__apps_section .p-channel_details_section__icon {
    color: #8f9b36;}
.p-member_directory__search_filter_container{
 background-color: #1a1a1a !important;
}
.c-icon_button--light.c-button-unstyled:hover, .c-icon_button--light:hover, .c-icon_button--light:link:hover{
background: #3c3c3c !important;}
.p-message_pane_input_broadcast_warning{
background:#202020;}
.c-select_input__content_text{
color:white;}
.p-user_group_list__search{
    background: #222;}
    .p-message_pane_input_broadcast_warning__highlight {
    background: #8349d9;
    display: inline-block;
    padding: 0 3px;
    line-height: 20px;
    border-radius: 3px;
    position: relative;
    top: 2px;
    height: 21px;
}
    .p-user_group_base_row__list_item {
    width: 100%;
    background-color: #222222 !important;
    border-bottom: 1px solid #323232 !important; }
    .p-user_group_list__search {
    border-bottom: 1px solid #686868 !important;}
    .p-user_group_row:hover {
    background-color: #282828 !important;}
 .p-user_group_list {
    background: #222222;
    color: white;}
ts-space header .owner_detail .offscreen.js_editable_text+.inline-edit {
    display: inline-block;
    background: white !important;
}
.c-menu_item__button--danger .c-menu_item__description {
    color: rgba(255, 255, 255, 0.7) !important;}
.c-texty_input .ql-editor pre {
    padding: 8px;
    background: white;
    color: black;}
    .p-docs_editor_title .ql-editor p, .p-docs_editor_title .ql-editor~.ql-placeholder{
    color:black !important}
ts-rocket .text.pre+.pre{
background:white !important;
}
ts-rocket .pre.text.first, ts-rocket.post_body .pre.text.first, ts-rocket.post_body>div>pre.first, ts-rocket>div>pre.first{
background:white !important;}
ts-rocket div.text *, ts-rocket.post_body div.text *{
background: white !important;
    color: black !important;
}
.c-fullscreen_modal__body{
padding:0 !important}
.p-message_pane_input__disabled {
    background-color: #151515;
    color: rgba(255, 255, 255, 0.7);
    }
.p-team_sidebar__add_button {
    background: rgb(31, 39, 27);
    border-color: rgba(61, 158, 85, 0.3);}
/* ... */

